--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/hospital?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=root123456
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
